# ros2-webcam-recorder

./: reader.py  webcam_2cam_config.yaml
kenneth_interfaces/: CMakeLists.txt  package.xml
kenneth_interfaces/msg/: Chemical.msg  ConveyorStep.msg  Coordinates.msg  JointData.msg  LanguageInstruction.msg  LastParcel.msg  ParcelStatus.msg  PressureSensor.msg  Robot.msg
robot_interfaces/: CMakeLists.txt  package.xml
webcam_recorder/: package.xml  setup.cfg  setup.py
webcam_recorder/webcam_recorder/: bag_recorder_node.py  language_publisher_node.py  new_bag_recorder_node.py  webcam_node.py
