cmake_minimum_required(VERSION 3.8)
project(kenneth_interfaces)
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/CameraData.msg"
  "msg/LanguageInstruction.msg"
  "msg/Chemical.msg"
  "msg/Coordinates.msg"
  "msg/ConveyorStep.msg"
  "msg/LastParcel.msg"
  "msg/ParcelStatus.msg"
  "msg/PressureSensor.msg"
  "msg/Robot.msg"
  "msg/JointData.msg"
  DEPENDENCIES sensor_msgs geometry_msgs
)
ament_package()
